--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 h1 {
     margin: 0 0 0 0;
     padding: 10px 0;
@@ -14,16 +13,17 @@ h2 {
     color: #3379ac;
 }
 
-p, li {
+p,
+li {
     font-size: 16px;
     line-height: 2;
     letter-spacing: 1px;
 }
 
 html {
-    font-size:  large;
+    font-size: large;
     font-family: 'Open Sans', sans-serif;
-    background-color:#425664;
+    background-color: #425664;
 }
 
 body {
@@ -34,13 +34,22 @@ body {
     border: 5px solid goldenrod;
 }
 
-img {
+.profile-style {
     margin-top: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
     border-radius: 15px;
+    width: 200px;
     max-width: 50%;
+}
+
+.wall-style {
+    display: block;
+    padding: 0%;
+    margin: 0;
+    width: max-content;
+    background-color: hotpink;
 }
 
 h2.center {
